<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/onOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        android:background="?android:attr/colorPrimary"
        android:text="@string/wifi"
        android:textColor="@android:color/background_light"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatus"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/busca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectionStatus"
        android:layout_alignBaseline="@+id/onOff"
        android:layout_alignBottom="@+id/onOff"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/colorPrimary"
        android:text="@string/buscar"
        android:textColor="@android:color/background_light"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatus"
        tools:layout_editor_absoluteX="185dp" />

    <ListView
        android:id="@+id/peerListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/onOff"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:background="?android:attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/busca"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/readMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/peerListView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="0dp"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/peerListView"
        tools:layout_editor_absoluteX="152dp" />

    <Button
        android:id="@+id/sendBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/colorPrimary"
        android:text="@string/informa_es"
        android:textColor="?android:attr/colorBackground"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="460dp" />

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/buscando_conex"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</RelativeLayout>